syntax = "proto3";

package bookings;

service BookingsService {
    rpc CreateBooking (CreateBookingRequest) returns (CreateBookingResponse);
}

message CreateBookingRequest {
    int32 account_id = 1;
    int32 session_id = 2;
    string seat = 3;
}

message CreateBookingResponse {
    bool success = 1;
}